--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,26 @@
-Flask==3.0.0
+alembic==1.17.2
+blinker==1.9.0
+click==8.3.1
+defusedxml==0.7.1
+dnspython==2.8.0
+email-validator==2.3.0
+Flask==3.1.2
+Flask-Mail==0.10.0
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.5
-Flask-Mail==0.9.1
-fpdf2==2.7.6
-Werkzeug==3.0.1
+Flask-WTF==1.2.2
+fonttools==4.61.1
+fpdf2==2.8.5
+greenlet==3.3.0
+idna==3.11
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.10
+MarkupSafe==3.0.3
+pillow==12.0.0
+psycopg2-binary==2.9.11
+python-dotenv==1.2.1
+SQLAlchemy==2.0.45
+typing_extensions==4.15.0
+Werkzeug==3.1.4
+WTForms==3.2.1
