--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 fonttools==4.61.1
 fpdf2==2.8.5
+gitdb==4.0.12
+GitPython==3.1.41
 greenlet==3.3.0
 idna==3.11
 itsdangerous==2.2.0
@@ -20,6 +22,8 @@ MarkupSafe==3.0.3
 pillow==12.0.0
 psycopg2-binary==2.9.11
 python-dotenv==1.2.1
+setuptools==78.1.1
+smmap==5.0.2
 SQLAlchemy==2.0.45
 typing_extensions==4.15.0
 Werkzeug==3.1.4
