--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,19 @@
 # Flask Configuration
-SECRET_KEY=your-secret-key-here
-DATABASE_URL=sqlite:///batan3.db
 FLASK_APP=run.py
+FLASK_DEBUG=1
+SECRET_KEY=your-secret-key-here
+
+# Database URL
+DATABASE_URL=postgresql://user:password@server:5432/batan3_db
 
 # Email Configuration (Flask-Mail)
 # Para Gmail: Necesitas habilitar "Contraseñas de aplicación" en tu cuenta Google
 # Instrucciones: https://support.google.com/accounts/answer/185833
 
 MAIL_SERVER=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USE_TLS=true
+MAIL_PORT=465
+MAIL_USE_TLS=false
+MAIL_USE_SSL=true
 MAIL_USERNAME=tu-correo@gmail.com
 MAIL_PASSWORD=tu-contraseña-de-aplicacion
 MAIL_DEFAULT_SENDER=noreply@batan3.com
